--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
           </form>
           <form class="form-signin" role="form">
-              <button class="btn btn-lg btn-warning btn-block" type="button" data-toggle="modal" data-target=".modal-reg" onclick="test_function()">Sign up</button>
+              <button class="btn btn-lg btn-warning btn-block" type="button" data-toggle="modal" data-target=".modal-reg" onclick="">Sign up</button>
           </form>
         </div>
       </div>
@@ -53,10 +53,20 @@
 
                   <div class="modal-body">
                     <form class="form row" role="form" id="register_formulaire">
-
-                      <div class="form-group col-md-6">
+                      
+                      <div class="form-group col-md-12">
                         <label class="" for="register_name">Enter your pseudo:</label>
                         <input type="texte" class="form-control" id="register_name" placeholder="Pseudo" required>
+                      </div>
+                    
+
+                       <div class="form-group col-md-12">
+                        <label for="register_gender">Select your gender:</label>
+                        <select class="form-control" id="register_gender" onchange="obj.remplirChampAvatar(this.value)">
+                          <option value="na">Select</option>
+                          <option value="man">Man</option>
+                          <option value="woman">Woman</option>
+                        </select>
                       </div>
 
                       <div class="form-group col-md-12">
@@ -66,7 +76,9 @@
 
                       <div class="col-md-12">
                         <hr>
-                      </div> 
+                        <label for="">Your BirthDate:</label>
+                      </div>
+
 
                       <div class="form-group col-md-4">
                         <label for="register_birthdate_day">Day</label>
@@ -119,7 +131,11 @@
 
                       <div class="col-md-12">
                         <hr>
-                      </div>  
+                        <label for="">Select an avatar:</label>
+                      </div>
+
+                      <div class="col-md-12 thumb" id="display_avatar">
+                      </div>
 
                       <div class="form-group col-md-12">
                       <div class="col-md-4" id="signupButtonAjaxLoader">
