--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/signin.css" rel="stylesheet">
+    <!-- angular js -->
+    <script  type="text/javascript"  src="dist/js/angular.min.js"></script>
   </head>
   <body>
 <div class="container">
