--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/signin.css" rel="stylesheet">
+    <script>
+    var onload = {};
+    onload.post = function (data, callback) { 
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "/");
+        xhr.onreadystatechange = callback;
+        xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+        xhr.send(JSON.stringify(data));
+    };
+    onload.log_callback = function () {
+      if (this.readyState == 4 && this.status == 200) {
+        var r = JSON.parse(this.responseText);
+        console.log(r) ;
+        if (r.categorie == "SUCCESS"){
+          if(r.suc_methode == "CHECKCOOKIE"){
+            console.log('connected !');
+            data = r.data;
+            window.location.href = './html/accueil.html?avatar='+data.avatar+'&gender='+data.gender+'&pseudo='+data.pseudo+'';
+          }     
+        }else if(r.message == "erreurCookie"){
+          console.log("pas de cookie en DB");
+          return;
+        }
+      }
+    };
+    onload.post({action:'CHECKCOOKIE'}, onload.log_callback);
+   </script>
 
   </head>
   <body>
