--- a/html/accueil.html
+++ b/html/accueil.html
@@ -289,7 +289,7 @@
                         <form id="envoyerMessageChatRoomFormId">
                         <div class="panel-footer">
                             <div class="input-group">
-                                <input onFocus="window.scrollTo(0, 0); document.body.scrollTop = 0;" id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." style="font-size: 16px;"/>
+                                <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." style="font-size: 16px;"/>
                                 <span class="input-group-btn" id="btnChatAjaxLoaderId">
                                     <button class="btn btn-warning btn-sm" id="btn-chat">
                                         Send
