--- a/html/accueil.html
+++ b/html/accueil.html
@@ -376,6 +376,7 @@
         
     </script>
     <script src="../js/chatroomSocket.js"></script>
+    <script src="../js/accueil.js"></script>
 
 </body>
 
