--- a/html/accueil.html
+++ b/html/accueil.html
@@ -310,7 +310,7 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <form>
+                                    <form id='FORM_VOTER1EURO'>
                                         <div class="form-group">
                                           <label for="VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
                                           <select class="form-control" id="VOTER1EURO">
