--- a/html/accueil.html
+++ b/html/accueil.html
@@ -312,8 +312,8 @@
                                 <div class="col-lg-4">
                                     <form id='FORM_VOTER1EURO'>
                                         <div class="form-group">
-                                          <label for="VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
-                                          <select class="form-control" id="VOTER1EURO">
+                                          <label for="SELECT_VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
+                                          <select class="form-control" id="SELECT_VOTER1EURO">
                                           </select>
                                         </div>
                                         <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Submit</button>
