--- a/html/accueil.html
+++ b/html/accueil.html
@@ -316,6 +316,16 @@
                                           <select class="form-control" id="SELECT_VOTER1EURO">
                                           </select>
                                         </div>
+                                         <div class="form-group">
+                                          <label for="SELECT_VOTER2EURO">Sélectionner le second de l'Euro 2016:</label>
+                                          <select class="form-control" id="SELECT_VOTER2EURO">
+                                          </select>
+                                        </div>
+                                         <div class="form-group">
+                                          <label for="SELECT_VOTER3EURO">Sélectionner le troisième de l'Euro 2016:</label>
+                                          <select class="form-control" id="SELECT_VOTER3EURO">
+                                          </select>
+                                        </div>
                                         <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Submit</button>
                                     </form>
                                 </div>
