--- a/html/accueil.html
+++ b/html/accueil.html
@@ -309,7 +309,7 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-5">
                                     <form id='FORM_VOTER1EURO'>
                                         <div class="form-group">
                                           <label for="SELECT_VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
@@ -327,11 +327,12 @@
                                           </select>
                                         </div>
                                         <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Submit</button>
+                                        <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
                                     </form>
                                 </div>
                                 <!-- /.col-lg-4 (nested) -->
-                                <div class="col-lg-8">
-                                    <div id="morris-bar-chart"></div>
+                                <div class="col-lg-5 col-lg-offset-1">
+                                    <div id=""></div>
                                 </div>
                                 <!-- /.col-lg-8 (nested) -->
                             </div>
