--- a/html/accueil.html
+++ b/html/accueil.html
@@ -273,6 +273,54 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+            <div class="row"><!-- row paris vainqueurs -->
+                <div class="col-lg-5">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Vainqueurs de la l'Euro?
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form id='FORM_VOTER1EURO'>
+                                        <div class="form-group">
+                                          <label for="SELECT_VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
+                                          <p class="text-primary col-md-12" id="SELECT_VOTER1EURO_VOTED" style="display:none">Vous avez voté :</p>
+                                          <select class="form-control" id="SELECT_VOTER1EURO" style="">                                          
+                                          </select>
+                                        </div>
+                                         <div class="form-group">                                          
+                                          <label for="SELECT_VOTER2EURO">Sélectionner le second de l'Euro 2016:</label>
+                                          <p class="text-primary col-md-12" id="SELECT_VOTER2EURO_VOTED" style="display:none">Vous avez voté :</p>
+                                          <select class="form-control" id="SELECT_VOTER2EURO" style="">                                          
+                                          </select>
+                                        </div>
+                                         <div class="form-group">                                          
+                                          <label for="SELECT_VOTER3EURO">Sélectionner le troisième de l'Euro 2016:</label>
+                                          <p class="text-primary col-md-12" id="SELECT_VOTER3EURO_VOTED" style="display:none">Vous avez voté :</p>
+                                          <select class="form-control" id="SELECT_VOTER3EURO" style="">                                          
+                                          </select>
+                                        </div>
+                                        <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Submit</button>                                        
+                                        <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
+                                        <p class="text-success" id="voteVainqueursOK" style="height:auto; width:auto; display:none;"> Vote Envoyé !</p>
+                                        <p class="text-danger" id="voteVainqueursKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
+                                    </form>
+                                </div>
+                                <!-- /.col-lg-4 (nested) -->
+                                <div class="col-lg-5 col-lg-offset-1">
+                                    <div id=""></div>
+                                </div>
+                                <!-- /.col-lg-8 (nested) -->
+                            </div>
+                            <!-- /.row -->
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                </div>
+                <!-- /.col-lg-8 -->
+            </div>
             <div class="row"><!-- row chat -->
                 <div class="col-md-4">
                     <div class="chat-panel panel panel-default">
@@ -289,7 +337,7 @@
                         <form id="envoyerMessageChatRoomFormId">
                         <div class="panel-footer">
                             <div class="input-group">
-                                <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." style="font-size: 16px;"/>
+                                <input id="btn-input" type="text" minlength=1 maxlength=30 class="form-control input-sm" placeholder="Type your message here..." style="font-size: 16px;"/>
                                 <span class="input-group-btn" id="btnChatAjaxLoaderId">
                                     <button class="btn btn-warning btn-sm" id="btn-chat">
                                         Send
@@ -301,47 +349,6 @@
                         <!-- /.panel-footer -->
                     </div><!-- TOUT LE CHAT --><!-- /.panel .chat-panel -->
                 </div>
-                <div class="col-lg-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Vainqueurs de la l'Euro?
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-5">
-                                    <form id='FORM_VOTER1EURO'>
-                                        <div class="form-group">
-                                          <label for="SELECT_VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
-                                          <select class="form-control" id="SELECT_VOTER1EURO">
-                                          </select>
-                                        </div>
-                                         <div class="form-group">
-                                          <label for="SELECT_VOTER2EURO">Sélectionner le second de l'Euro 2016:</label>
-                                          <select class="form-control" id="SELECT_VOTER2EURO">
-                                          </select>
-                                        </div>
-                                         <div class="form-group">
-                                          <label for="SELECT_VOTER3EURO">Sélectionner le troisième de l'Euro 2016:</label>
-                                          <select class="form-control" id="SELECT_VOTER3EURO">
-                                          </select>
-                                        </div>
-                                        <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Submit</button>
-                                        <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
-                                    </form>
-                                </div>
-                                <!-- /.col-lg-4 (nested) -->
-                                <div class="col-lg-5 col-lg-offset-1">
-                                    <div id=""></div>
-                                </div>
-                                <!-- /.col-lg-8 (nested) -->
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                </div>
-                <!-- /.col-lg-8 -->
             </div>
             <!-- /.row -->
         
