--- a/html/accueil.html
+++ b/html/accueil.html
@@ -308,18 +308,28 @@
                                         <p class="text-danger" id="voteVainqueursKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
                                     </form>
                                 </div>
-                                <!-- /.col-lg-4 (nested) -->
-                                <div class="col-lg-5 col-lg-offset-1">
-                                    <div id=""></div>
-                                </div>
-                                <!-- /.col-lg-8 (nested) -->
                             </div>
                             <!-- /.row -->
                         </div>
                         <!-- /.panel-body -->
                     </div>
                 </div>
+                 <div class="col-lg-5">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Votes des joueurs :
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    EN cours
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 <!-- /.col-lg-8 -->
+                </div>
             </div>
             <div class="row"><!-- row chat -->
                 <div class="col-md-4">
