--- a/html/accueil.html
+++ b/html/accueil.html
@@ -277,7 +277,7 @@
                 <div class="col-lg-5">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Vainqueurs de la l'Euro?
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Vainqueurs de l'Euro?
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
