--- a/html/accueil.html
+++ b/html/accueil.html
@@ -323,15 +323,14 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <div class="progress">
-                                          <div id="progressBarVainqueurEURO1"  class="progress-bar progress-bar-success" style="width: 0%">
-                                          </div>
-                                          <div id="progressBarVainqueurEURO2" class="progress-bar progress-bar-warning progress-bar-striped" style="width: 0%">
-                                          </div>
-                                          <div id="progressBarVainqueurEURO3" class="progress-bar progress-bar-danger" style="width: 0%">
-                                          </div>
-                                     </div>
-                                </div>
+                                      <table id='tableClassementVainqueursEuro' class="table table-bordered">
+                                        <tr>
+                                            <th>Pseudo :</th>
+                                            <th>Vainqueur :</th> 
+                                            <th>1er Dauphin :</th>
+                                            <th>3èm Dauphin :</th>
+                                         </tr>
+                                      </table>
                             </div>
                         </div>
                     </div>
