--- a/html/accueil.html
+++ b/html/accueil.html
@@ -323,7 +323,7 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-12">
-                                      <table id='tableClassementVainqueursEuro' class="table table-bordered">
+                                    <table id='tableClassementVainqueursEuro' class="table table-bordered">
                                         <tr>
                                             <th>Pseudo :</th>
                                             <th>Vainqueur :</th> 
@@ -331,6 +331,7 @@
                                             <th>3èm Dauphin :</th>
                                          </tr>
                                       </table>
+                                </div>
                             </div>
                         </div>
                     </div>
