--- a/html/accueil.html
+++ b/html/accueil.html
@@ -325,10 +325,10 @@
                                 <div class="col-lg-12">
                                     <table id='tableClassementVainqueursEuro' class="table table-bordered">
                                         <tr>
-                                            <th>Pseudo :</th>
-                                            <th>Vainqueur :</th> 
-                                            <th>1er Dauphin :</th>
-                                            <th>3èm Dauphin :</th>
+                                            <th>Pseudo</th>
+                                            <th>Vainqueur</th> 
+                                            <th>1er Dauphin</th>
+                                            <th>2èm Dauphin</th>
                                          </tr>
                                       </table>
                                 </div>
