--- a/html/accueil.html
+++ b/html/accueil.html
@@ -320,7 +320,7 @@
                             <i class="fa fa-bar-chart-o fa-fw"></i> Votes des joueurs :
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body">
+                        <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <table id='tableClassementVainqueursEuro' class="table table-bordered">
