--- a/html/accueil.html
+++ b/html/accueil.html
@@ -330,6 +330,8 @@
                                             <th>1er Dauphin</th>
                                             <th>2èm Dauphin</th>
                                          </tr>
+                                          <tr id="ligneMesVotesVainqueursEuro">
+                                         </tr>
                                       </table>
                                 </div>
                             </div>
