--- a/html/accueil.html
+++ b/html/accueil.html
@@ -330,7 +330,7 @@
                                             <th>1er Dauphin</th>
                                             <th>2èm Dauphin</th>
                                          </tr>
-                                         <tr id="ligneMesVotesVainqueursEuro">
+                                         <tr id="ligneMesVotesVainqueursEuro" class="info">
                                           </tr>
                                       </table>
                                 </div>
