--- a/html/accueil.html
+++ b/html/accueil.html
@@ -306,6 +306,7 @@
                                         <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
                                         <p class="text-success" id="voteVainqueursOK" style="height:auto; width:auto; display:none;"> Vote Envoyé !</p>
                                         <p class="text-danger" id="voteVainqueursKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
+                                        <p class="text-warning" id="voteVainqueursKOdoublon" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! Choisir une équipe différente pour chaque classement !</p>
                                     </form>
                                 </div>
                             </div>
