--- a/html/accueil.html
+++ b/html/accueil.html
@@ -56,18 +56,17 @@
             <!-- /.navbar-header -->
             <a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a>
             <ul class="nav navbar-top-links navbar-right">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                <li class="dropdown open">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
                         <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="../index.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
-                    <!-- /.dropdown-user -->
+                    <!-- /.dropdown-messages -->
                 </li>
-                <!-- /.dropdown -->
-            </ul>
+             </ul>
             <!-- /.navbar-top-links -->
         </nav>
 
