--- a/html/accueil.html
+++ b/html/accueil.html
@@ -50,7 +50,7 @@
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">
                 <a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a>
-                <li class="dropdown open">
+                <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
                         <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
