--- a/html/accueil.html
+++ b/html/accueil.html
@@ -50,7 +50,7 @@
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">
                 <a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a>
-                <span class="glyphicon glyphicon-off" aria-hidden="true" href="../index.html"></span>
+                <a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" ></span></a>
              </ul>
             <!-- /.navbar-top-links -->
         </nav>
