--- a/html/accueil.html
+++ b/html/accueil.html
@@ -48,10 +48,10 @@
                 <a class="navbar-brand" href="index.html" id="pseudo_id"></a>
             </div>
             <!-- /.navbar-header -->
-            <ul class="nav navbar-top-links navbar-right">
-                <a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a>
-                <a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" ></span></a>
-             </ul>
+                 <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a></li>
+                  <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
+                </ul>
             <!-- /.navbar-top-links -->
         </nav>
 
