--- a/html/accueil.html
+++ b/html/accueil.html
@@ -39,24 +39,18 @@
 </head>
 
 <body class="container-fluid">
-
-    
-
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html" id="pseudo_id"></a>
-            </div>
-            <!-- /.navbar-header -->
-                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a></li>
-                  <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
-                </ul>
-            <!-- /.navbar-top-links -->
-        </nav>
-
-        
-            <div class="row">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#" id='pseudo_id'></a>
+        </div>
+         <ul class="nav navbar-nav navbar-right">
+          <li><a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a></li>
+          <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
+        </ul>
+      </div>
+    </nav>
+        <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Hello there ! </h1>
                 </div>
