--- a/html/accueil.html
+++ b/html/accueil.html
@@ -39,14 +39,15 @@
 </head>
 
 <body class="container-fluid">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#" id='pseudo_id'></a>
         </div>
          <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" class="pull-right"><img class="img-circle" id="imgAvatar" src=""></a></li>
           <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
+          <li><a href="#" ><img class="img-circle" id="imgAvatar" src=""></a></li>
+       
         </ul>
       </div>
     </nav>
