--- a/html/accueil.html
+++ b/html/accueil.html
@@ -39,16 +39,17 @@
 </head>
 
 <body class="container-fluid">
-    <nav class="navbar navbar">
+    <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#" id='pseudo_id'></a>
         </div>
+        <div class="collapse navbar-collapse"
          <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
           <li><a href="#" ><img class="img-circle" id="imgAvatar" src=""></a></li>
-       
         </ul>
+        </div>
       </div>
     </nav>
         <div class="row">
