--- a/html/accueil.html
+++ b/html/accueil.html
@@ -42,12 +42,20 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#" id='pseudo_id'></a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" 
+                    data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" rel="home" href="#" title="Logo">
+                <img style="max-width:100px; margin-top: -7px;" src="" id="imgAvatar">
+            </a>
         </div>
-        <div class="collapse navbar-collapse"
+        <div class="collapse navbar-collapse">
          <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
-          <li><a href="#" ><img class="img-circle" id="imgAvatar" src=""></a></li>
         </ul>
         </div>
       </div>
