--- a/html/accueil.html
+++ b/html/accueil.html
@@ -42,15 +42,8 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" 
-                    data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
             <a class="navbar-brand" rel="home" href="#" title="Logo">
-                <img style="max-width:100px; margin-top: -7px;" src="" id="imgAvatar">
+                <img style="max-width:100px;" src="" id="imgAvatar" class="img-circle">
             </a>
         </div>
         <div class="collapse navbar-collapse">
