--- a/html/accueil.html
+++ b/html/accueil.html
@@ -40,19 +40,14 @@
 
 <body class="container-fluid">
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" rel="home" href="#" title="Logo">
-                <img style="max-width:100px;" src="" id="imgAvatar" class="img-circle">
-            </a>
-        </div>
-        <div class="collapse navbar-collapse">
-         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../index.html"><span class="glyphicon glyphicon-off" aria-hidden="true" >Log Out !</span></a></li>
-        </ul>
-        </div>
-      </div>
-    </nav>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img  alt="Brand" src="" id="imgAvatar" class="img-circle">
+      </a>
+    </div>
+  </div>
+</nav>
         <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Hello <span id='pseudo_id'></span> ! </h1>
