--- a/html/accueil.html
+++ b/html/accueil.html
@@ -39,15 +39,34 @@
 </head>
 
 <body class="container-fluid">
-    <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img  alt="Brand" src="" id="imgAvatar" class="img-circle">
-      </a>
-    </div>
-  </div>
-</nav>
+    <style>
+        .navbar-brand,
+        .navbar-nav li a {
+            line-height: 150px;
+            height: 150px;
+            padding-top: 0;
+        }
+    </style>
+            <nav class="navbar navbar-default">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+        
+                <a class="navbar-brand" href="#"><img  alt="Brand" src="" id="imgAvatar" class="img-circle"></a>
+            </div>
+        
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Hello <span id='pseudo_id'></span> ! </h1>
