--- a/html/accueil.html
+++ b/html/accueil.html
@@ -55,7 +55,7 @@
             </div>
         </nav>
         <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-8 col-lg-offset-3">
                     <h1 class="page-header">Hello <span id='pseudo_id'></span> ! </h1>
                 </div>
                 <!-- /.col-lg-12 -->
