--- a/html/accueil.html
+++ b/html/accueil.html
@@ -55,8 +55,8 @@
             </div>
         </nav>
         <div class="row">
-                <div class="col-lg-8 col-lg-offset-3">
-                    <h1 class="page-header">Hello <span id='pseudo_id'></span> ! </h1>
+                <div class="col-lg-12">
+                    <h1 class="page-header text-center">Hello <span id='pseudo_id'></span> ! </h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
