--- a/html/accueil.html
+++ b/html/accueil.html
@@ -57,12 +57,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" id='pseudo_id'>Brand</a>
+      <a href="#"><img  alt="Brand" src="" id="imgAvatar" class="img-circle"></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">LogOut</a></li>
-        <li><a href="#"><img  alt="Brand" src="" id="imgAvatar" class="img-circle"></a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-search" aria-hidden="true">LogOut</span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
