--- a/html/accueil.html
+++ b/html/accueil.html
@@ -61,7 +61,11 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-search" aria-hidden="true">LogOut</span></a></li>
+        <li><a href="#">
+        <button type="button" class="btn btn-default btn-md">
+          <span class="glyphicon glyphicon-off" aria-hidden="true"></span> LogOut
+        </button>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
