--- a/html/accueil.html
+++ b/html/accueil.html
@@ -39,15 +39,8 @@
 </head>
 
 <body class="container-fluid">
-    <style>
-        .navbar-brand,
-        .navbar-nav li a {
-            line-height: 100px;
-            height: 100px;
-            padding-top: 0;
-        }
-    </style>
-<nav class="navbar navbar-default">
+
+<nav class="navbar navbar-default" style="height:70px; padding-top: 5px;">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
