--- a/html/accueil.html
+++ b/html/accueil.html
@@ -55,7 +55,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-        <button type="button" class="btn btn-default btn-md">
+        <button type="button" class="btn btn-default btn-md" onclick="eraseCookie();">
           <span class="glyphicon glyphicon-off" aria-hidden="true"></span> LogOut
         </button>
         </li>
