--- a/html/accueil.html
+++ b/html/accueil.html
@@ -182,11 +182,11 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../dist/js/sb-admin-2-js/metisMenu.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
+    <!-- Morris Charts JavaScript 
     <script src="../dist/js/sb-admin-2-js/raphael-min.js"></script>
     <script src="../dist/js/sb-admin-2-js/morris.min.js"></script>
     <script src="../dist/js/sb-admin-2-js/morris-data.js"></script>
-
+    -->
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2-js/sb-admin-2.js"></script>
 
