--- a/html/accueil.html
+++ b/html/accueil.html
@@ -120,6 +120,7 @@
                         <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
                             <div class="row">
                                 <div class="col-lg-12">
+                                    <p>Pays en tête :</p>
                                     <div class="progress">
                                       <div id="progress_bar_id_vainqueur_euro_2016"class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
                                           Pas de votes suffisant
