--- a/html/accueil.html
+++ b/html/accueil.html
@@ -145,112 +145,7 @@
                 <!-- /.col-lg-8 -->
                 </div>
             </div>
-            <div class="row"><!-- row poule -->
-                <!-- poule A -->
-                <div class="col-md-4">
-                    <div class="chat-panel panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-comments fa-fw"></i>
-                            Groupe A                            
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <form id='formGroupA'>
-                                        <div class="form-group">
-                                          <label for="SELECT_GROUPA1">Sélectionner le premier du groupe A:</label>
-                                          <p class="text-primary col-md-12" id="SELECT_GROUPA1_VOTED" style="display:none">Vous avez voté :</p>
-                                          <select class="form-control" id="SELECT_GROUPA1" style="">                                          
-                                          </select>
-                                        </div>
-                                         <div class="form-group">                                          
-                                          <label for="SELECT_GROUPA2">Sélectionner le second du groupe A:</label>
-                                          <p class="text-primary col-md-12" id="SELECT_GROUPA2_VOTED" style="display:none">Vous avez voté :</p>
-                                          <select class="form-control" id="SELECT_SELECT_GROUPA2" style="">                                          
-                                          </select>
-                                        </div>                                         
-                                        <button type="submit" class="btn btn-default" id="BTN_SELECT_GROUPA">Submit</button>                                        
-                                        <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
-                                        <p class="text-success" id="resultGroupAsubmitOK" style="height:auto; width:auto; display:none;"> Vote Envoyé !</p>
-                                        <p class="text-danger" id="resultGroupAsubmitKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
-                                        <p class="text-warning" id="resultGroupAsubmitKOdoublon" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! Choisir une équipe différente pour chaque classement !</p>
-                                    </form>
-                                </div>
-                            </div>                    
-                        </div>                        
-                    </div>
-                </div>
-                <!-- poule B -->
-                <div class="col-md-4">
-                    <div class="chat-panel panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-comments fa-fw"></i>
-                            Groupe B                            
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <form id='formGroupB'>
-                                        <div class="form-group">
-                                          <label for="SELECT_GROUPB1">Sélectionner le premier du groupe B:</label>
-                                          <p class="text-primary col-md-12" id="SELECT_GROUPB1_VOTED" style="display:none">Vous avez voté :</p>
-                                          <select class="form-control" id="SELECT_GROUPB1" style="">                                          
-                                          </select>
-                                        </div>
-                                         <div class="form-group">                                          
-                                          <label for="SELECT_GROUPB2">Sélectionner le second du groupe B:</label>
-                                          <p class="text-primary col-md-12" id="SELECT_GROUPB2_VOTED" style="display:none">Vous avez voté :</p>
-                                          <select class="form-control" id="SELECT_SELECT_GROUPB2" style="">                                          
-                                          </select>
-                                        </div>                                         
-                                        <button type="submit" class="btn btn-default" id="BTN_SELECT_GROUPB">Submit</button>                                        
-                                        <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
-                                        <p class="text-success" id="resultGroupBsubmitOK" style="height:auto; width:auto; display:none;"> Vote Envoyé !</p>
-                                        <p class="text-danger" id="resultGroupBsubmitKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
-                                        <p class="text-warning" id="resultGroupBsubmitKOdoublon" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! Choisir une équipe différente pour chaque classement !</p>
-                                    </form>
-                                </div>
-                            </div>                    
-                        </div>                        
-                    </div>
-                </div>
-                <!-- poule C -->
-                <div class="col-md-4">
-                    <div class="chat-panel panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-comments fa-fw"></i>
-                            Groupe C                            
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <form id='formGroupC'>
-                                        <div class="form-group">
-                                          <label for="SELECT_GROUPC1">Sélectionner le premier du groupe C:</label>
-                                          <p class="text-primary col-md-12" id="SELECT_GROUPC1_VOTED" style="display:none">Vous avez voté :</p>
-                                          <select class="form-control" id="SELECT_GROUPC1" style="">                                          
-                                          </select>
-                                        </div>
-                                         <div class="form-group">                                          
-                                          <label for="SELECT_GROUPC2">Sélectionner le second du groupe C:</label>
-                                          <p class="text-primary col-md-12" id="SELECT_GROUPBC_VOTED" style="display:none">Vous avez voté :</p>
-                                          <select class="form-control" id="SELECT_SELECT_GROUPC2" style="">                                          
-                                          </select>
-                                        </div>                                         
-                                        <button type="submit" class="btn btn-default" id="BTN_SELECT_GROUPC">Submit</button>                                        
-                                        <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
-                                        <p class="text-success" id="resultGroupCsubmitOK" style="height:auto; width:auto; display:none;"> Vote Envoyé !</p>
-                                        <p class="text-danger" id="resultGroupCsubmitKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
-                                        <p class="text-warning" id="resultGroupCsubmitKOdoublon" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! Choisir une équipe différente pour chaque classement !</p>
-                                    </form>
-                                </div>
-                            </div>                    
-                        </div>                        
-                    </div>
-                </div>
+            <div class="row" id='remplirPoule'><!-- row poule -->
             </div><!-- row poules-->
             <div class="row"><!-- row chat -->
                 <div class="col-md-12">
