--- a/html/accueil.html
+++ b/html/accueil.html
@@ -128,14 +128,16 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
-                                    <table id='tableClassementVainqueursEuro' class="table table-bordered">
+                                    <table id='' class="table table-bordered">
                                         <tr>
                                             <th>Pseudo</th>
                                             <th>Vainqueur</th> 
                                             <th>1er Dauphin</th>
                                             <th>2èm Dauphin</th>
                                          </tr>
-                                         <tr id="ligneMesVotesVainqueursEuro" class="info">
+                                            <tr id="ligneMesVotesVainqueursEuro" class="info">
+                                          </tr>
+                                          <tr id="tableClassementVainqueursEuro" >
                                           </tr>
                                       </table>
                                 </div>
@@ -148,7 +150,7 @@
             <div class="row" id='remplirPoule'><!-- row poule -->
             </div><!-- row poules-->
             <div class="row"><!-- row chat -->
-                <div class="col-md-12">
+                <div class="col-md-5 col-md-offset-3">
                     <div class="chat-panel panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-comments fa-fw"></i>
