--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               </br>
               <input type="password" class="form-control" placeholder="Password" id="formPassword" required>
             </div>
-            <label class="checkbox">
-              <input type="checkbox" value="remember-me" id="formRememberMe"> Remember me
+            <label class="checkbox" style="display:none">
+              <input type="checkbox" value="remember-me" id="formRememberMe" > Remember me
             </label>
             <div id="signinAjaxLoader">
     	         <button class="btn btn-lg btn-primary btn-block" type="submit" id="signinButton" disabled >Sign in</button>
@@ -130,6 +130,10 @@
                       <div class="form-group col-md-6" id="couleur_register_confirm_pwd">
                         <label class="" for="register_confirm_password">Confirm your password:</label>
                         <input type="password" class="form-control" id="register_confirm_password" placeholder="Confirm Password" required>
+                      </div>
+                      <div class="form-group col-md-6" id="">
+                        <label class="" for="register_unique_key">Entrez la clef donnée par l'admin:</label>
+                        <input type="password" class="form-control" id="register_unique_key" placeholder="Entrez la clef..." required>
                       </div>
                       <div class="form-group col-md-12">
                       <div class="col-md-4" id="signupButtonAjaxLoader">
