--- a/html/accueil.html
+++ b/html/accueil.html
@@ -98,7 +98,7 @@
                                           <select class="form-control" id="SELECT_VOTER3EURO" style="">                                          
                                           </select>
                                         </div>
-                                        <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Submit</button>                                        
+                                        <button type="submit" class="btn btn-default" id="BTN_VOTER1EURO">Voter ! </button>                                        
                                         <img id="voteVainqueursGIF"src="../images/ajax-loader-mid.gif" style="height:auto; width:auto; display:none;">
                                         <p class="text-success" id="voteVainqueursOK" style="height:auto; width:auto; display:none;"> Vote Envoyé !</p>
                                         <p class="text-danger" id="voteVainqueursKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
