--- a/html/accueil.html
+++ b/html/accueil.html
@@ -69,7 +69,42 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
-            <div class="row"><!-- row chat -->
+            <div class="row"><!-- row chat -->                
+                <div class="col-lg-7">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Votes des joueurs :
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p>Pays en tête :</p>
+                                    <div class="progress">
+                                      <div id="progress_bar_id_vainqueur_euro_2016"class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
+                                          Pas de votes suffisant
+                                      </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+                                    <table id='' class="table table-bordered">
+                                        <tr>
+                                            <th>Pseudo</th>
+                                            <th>Vainqueur</th> 
+                                            <th>Deuxième</th>
+                                            <th>Troisième</th>
+                                         </tr>
+                                            <tr id="ligneMesVotesVainqueursEuro" class="info">
+                                          </tr>
+                                          <tr id="tableClassementVainqueursEuro" >
+                                          </tr>
+                                      </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <!-- /.col-lg-8 -->
+                </div>
                 <div class="col-md-5">
                     <div class="chat-panel panel panel-default">
                         <div class="panel-heading">
@@ -97,45 +132,10 @@
                         <!-- /.panel-footer -->
                     </div><!-- TOUT LE CHAT --><!-- /.panel .chat-panel -->
                 </div>
-                <div class="col-lg-7">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Votes des joueurs :
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <p>Pays en tête :</p>
-                                    <div class="progress">
-                                      <div id="progress_bar_id_vainqueur_euro_2016"class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
-                                          Pas de votes suffisant
-                                      </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12">
-                                    <table id='' class="table table-bordered">
-                                        <tr>
-                                            <th>Pseudo</th>
-                                            <th>Vainqueur</th> 
-                                            <th>1er Dauphin</th>
-                                            <th>2èm Dauphin</th>
-                                         </tr>
-                                            <tr id="ligneMesVotesVainqueursEuro" class="info">
-                                          </tr>
-                                          <tr id="tableClassementVainqueursEuro" >
-                                          </tr>
-                                      </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <!-- /.col-lg-8 -->
-                </div>
             </div>
             <!-- /.row -->            
             <div class="row"><!-- row paris vainqueurs -->
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> Vainqueurs de l'Euro?
